added btn lg class and submit btn  to all Answer buttons in Quiz section

--- a/index.html
+++ b/index.html
@@ -76,15 +76,20 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 1</button>
-          <button class="btn btn-primary">Answer 2</button>
+          <button class="btn btn-primary btn-lg">Answer 1</button>
+          <button class="btn btn-primary btn-lg">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 3</button>
-          <button class="btn btn-primary">Answer 4</button>
+          <button class="btn btn-primary btn-lg">Answer 3</button>
+          <button class="btn btn-primary btn-lg">Answer 4</button>
           </div>
+          </div>
+          <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">Submit</button>
+            </div>
           </div>
           </div>
         </div>
@@ -100,15 +105,20 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 1</button>
-          <button class="btn btn-primary">Answer 2</button>
+          <button class="btn btn-primary btn-lg">Answer 1</button>
+          <button class="btn btn-primary btn-lg">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 3</button>
-          <button class="btn btn-primary">Answer 4</button>
+          <button class="btn btn-primary btn-lg">Answer 3</button>
+          <button class="btn btn-primary btn-lg">Answer 4</button>
           </div>
+          </div>
+          <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">Submit</button>
+            </div>
           </div>
           </div>
         </div>
@@ -124,15 +134,20 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 1</button>
-          <button class="btn btn-primary">Answer 2</button>
+          <button class="btn btn-primary btn-lg">Answer 1</button>
+          <button class="btn btn-primary btn-lg">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 3</button>
-          <button class="btn btn-primary">Answer 4</button>
+          <button class="btn btn-primary btn-lg">Answer 3</button>
+          <button class="btn btn-primary btn-lg">Answer 4</button>
           </div>
+          </div>
+          <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">Submit</button>
+            </div>
           </div>
           </div>
         </div>
@@ -148,15 +163,20 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 1</button>
-          <button class="btn btn-primary">Answer 2</button>
+          <button class="btn btn-primary btn-lg">Answer 1</button>
+          <button class="btn btn-primary btn-lg">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 3</button>
-          <button class="btn btn-primary">Answer 4</button>
+          <button class="btn btn-primary btn-lg">Answer 3</button>
+          <button class="btn btn-primary btn-lg">Answer 4</button>
           </div>
+          </div>
+          <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">Submit</button>
+            </div>
           </div>
           </div>
         </div>
@@ -172,15 +192,20 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 1</button>
-          <button class="btn btn-primary">Answer 2</button>
+          <button class="btn btn-primary btn-lg">Answer 1</button>
+          <button class="btn btn-primary btn-lg">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 3</button>
-          <button class="btn btn-primary">Answer 4</button>
+          <button class="btn btn-primary btn-lg">Answer 3</button>
+          <button class="btn btn-primary btn-lg">Answer 4</button>
           </div>
+          </div>
+          <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">Submit</button>
+            </div>
           </div>
           </div>
         </div>
@@ -196,15 +221,20 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 1</button>
-          <button class="btn btn-primary">Answer 2</button>
+          <button class="btn btn-primary btn-lg">Answer 1</button>
+          <button class="btn btn-primary btn-lg">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 3</button>
-          <button class="btn btn-primary">Answer 4</button>
+          <button class="btn btn-primary btn-lg">Answer 3</button>
+          <button class="btn btn-primary btn-lg">Answer 4</button>
           </div>
+          </div>
+          <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">Submit</button>
+            </div>
           </div>
           </div>
         </div>
@@ -220,15 +250,20 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 1</button>
-          <button class="btn btn-primary">Answer 2</button>
+          <button class="btn btn-primary btn-lg">Answer 1</button>
+          <button class="btn btn-primary btn-lg">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 3</button>
-          <button class="btn btn-primary">Answer 4</button>
+          <button class="btn btn-primary btn-lg">Answer 3</button>
+          <button class="btn btn-primary btn-lg">Answer 4</button>
           </div>
+          </div>
+          <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">Submit</button>
+            </div>
           </div>
           </div>
         </div>
@@ -244,15 +279,20 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 1</button>
-          <button class="btn btn-primary">Answer 2</button>
+          <button class="btn btn-primary btn-lg">Answer 1</button>
+          <button class="btn btn-primary btn-lg">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 3</button>
-          <button class="btn btn-primary">Answer 4</button>
+          <button class="btn btn-primary btn-lg">Answer 3</button>
+          <button class="btn btn-primary btn-lg">Answer 4</button>
           </div>
+          </div>
+          <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">Submit</button>
+            </div>
           </div>
           </div>
         </div>
@@ -268,15 +308,20 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 1</button>
-          <button class="btn btn-primary">Answer 2</button>
+          <button class="btn btn-primary btn-lg">Answer 1</button>
+          <button class="btn btn-primary btn-lg">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 3</button>
-          <button class="btn btn-primary">Answer 4</button>
+          <button class="btn btn-primary btn-lg">Answer 3</button>
+          <button class="btn btn-primary btn-lg">Answer 4</button>
           </div>
+          </div>
+          <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">Submit</button>
+            </div>
           </div>
           </div>
         </div>
@@ -292,15 +337,20 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 1</button>
-          <button class="btn btn-primary">Answer 2</button>
+          <button class="btn btn-primary btn-lg">Answer 1</button>
+          <button class="btn btn-primary btn-lg">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary">Answer 3</button>
-          <button class="btn btn-primary">Answer 4</button>
+          <button class="btn btn-primary btn-lg">Answer 3</button>
+          <button class="btn btn-primary btn-lg">Answer 4</button>
           </div>
+          </div>
+          <div class="row">
+            <div class="col-12 text-center">
+            <button class="btn btn-primary">Submit</button>
+            </div>
           </div>
           </div>
         </div>
