added actual quiz questions as a content

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 1</button>
-          <button class="btn btn-primary btn-lg">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 3</button>
-          <button class="btn btn-primary btn-lg">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
           </div>
           </div>
           <div class="row">
@@ -102,17 +102,17 @@
       <div class="card">
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
+          <h5 class="card-title text-center">What are the two main metals in the earth’s core?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 1</button>
-          <button class="btn btn-primary btn-lg">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 3</button>
-          <button class="btn btn-primary btn-lg">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
           </div>
           </div>
           <div class="row">
@@ -131,17 +131,17 @@
       <div class="card">
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
+          <h5 class="card-title text-center">Which is hotter, the center of the earth or surface of the sun?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 1</button>
-          <button class="btn btn-primary btn-lg">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 3</button>
-          <button class="btn btn-primary btn-lg">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
           </div>
           </div>
           <div class="row">
@@ -160,17 +160,17 @@
       <div class="card">
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
+          <h5 class="card-title text-center">What is the name of the deepest location in the world’s oceans?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 1</button>
-          <button class="btn btn-primary btn-lg">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 3</button>
-          <button class="btn btn-primary btn-lg">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
           </div>
           </div>
           <div class="row">
@@ -189,17 +189,17 @@
       <div class="card">
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
+          <h5 class="card-title text-center">Outside of Antarctica, what is the largest desert in the world?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 1</button>
-          <button class="btn btn-primary btn-lg">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 3</button>
-          <button class="btn btn-primary btn-lg">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
           </div>
           </div>
           <div class="row">
@@ -218,17 +218,17 @@
       <div class="card">
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
+          <h5 class="card-title text-center">The gemstone ruby is typically what color?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 1</button>
-          <button class="btn btn-primary btn-lg">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 3</button>
-          <button class="btn btn-primary btn-lg">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
           </div>
           </div>
           <div class="row">
@@ -247,17 +247,17 @@
       <div class="card">
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
+          <h5 class="card-title text-center">What is the name of the highest mountain on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 1</button>
-          <button class="btn btn-primary btn-lg">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 3</button>
-          <button class="btn btn-primary btn-lg">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
           </div>
           </div>
           <div class="row">
@@ -276,17 +276,17 @@
       <div class="card">
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
+          <h5 class="card-title text-center">The mass of the earth is made up mostly of which two elements?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 1</button>
-          <button class="btn btn-primary btn-lg">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 3</button>
-          <button class="btn btn-primary btn-lg">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
           </div>
           </div>
           <div class="row">
@@ -305,17 +305,17 @@
       <div class="card">
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
+          <h5 class="card-title text-center">What is the second most common gas found in the air we breathe?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 1</button>
-          <button class="btn btn-primary btn-lg">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 3</button>
-          <button class="btn btn-primary btn-lg">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
           </div>
           </div>
           <div class="row">
@@ -334,22 +334,22 @@
       <div class="card">
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
+          <h5 class="card-title text-center">The world's longest river is:</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 1</button>
-          <button class="btn btn-primary btn-lg">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg">Answer 3</button>
-          <button class="btn btn-primary btn-lg">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
+          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
           </div>
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary">Score</button>
             </div>
           </div>
           </div>
