added answers content to answer btns

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
+          <button class="btn btn-primary btn-lg text-nowrap answer-btn">The Pacific Ocean</button>
+          <button class="btn btn-primary btn-lg text-nowrap answer-btn">The Indian Ocean</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">The Atlantic Ocean</button>
+          <button class="btn btn-primary btn-lg answer-btn">The Arctic Ocean</button>
           </div>
           </div>
           <div class="row">
@@ -105,14 +105,14 @@
           <h5 class="card-title text-center">What are the two main metals in the earth’s core?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Silver and Gold</button>
+          <button class="btn btn-primary btn-lg answer-btn">Iron and Nickel</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Titanium and Aluminium</button>
+          <button class="btn btn-primary btn-lg answer-btn">Cobalt and Iron</button>
           </div>
           </div>
           <div class="row">
@@ -131,17 +131,17 @@
       <div class="card">
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
-          <h5 class="card-title text-center">Which is hotter, the center of the earth or surface of the sun?</h5>
+          <h5 class="card-title text-center">Which of the following is NOT considered a continent?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Antarctica</button>
+          <button class="btn btn-primary btn-lg answer-btn">Australia</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Europe</button>
+          <button class="btn btn-primary btn-lg answer-btn">Caribbean</button>
           </div>
           </div>
           <div class="row">
@@ -163,14 +163,14 @@
           <h5 class="card-title text-center">What is the name of the deepest location in the world’s oceans?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Tonga Trench</button>
+          <button class="btn btn-primary btn-lg answer-btn">Philippine Trench</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Mariana Trench</button>
+          <button class="btn btn-primary btn-lg answer-btn">Puerto Rico Trench</button>
           </div>
           </div>
           <div class="row">
@@ -192,14 +192,14 @@
           <h5 class="card-title text-center">Outside of Antarctica, what is the largest desert in the world?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Arabian Desert</button>
+          <button class="btn btn-primary btn-lg answer-btn">Sahara Desert</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Gobi Desert</button>
+          <button class="btn btn-primary btn-lg answer-btn">Kalahari Desert</button>
           </div>
           </div>
           <div class="row">
@@ -221,14 +221,14 @@
           <h5 class="card-title text-center">The gemstone ruby is typically what color?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">White</button>
+          <button class="btn btn-primary btn-lg answer-btn">Yellow</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Blue</button>
+          <button class="btn btn-primary btn-lg answer-btn">Red</button>
           </div>
           </div>
           <div class="row">
@@ -250,14 +250,14 @@
           <h5 class="card-title text-center">What is the name of the highest mountain on earth?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Mount Everest</button>
+          <button class="btn btn-primary btn-lg answer-btn">K2</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Makalu</button>
+          <button class="btn btn-primary btn-lg answer-btn">Cho Oyu</button>
           </div>
           </div>
           <div class="row">
@@ -279,14 +279,14 @@
           <h5 class="card-title text-center">The mass of the earth is made up mostly of which two elements?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Copper and Iron</button>
+          <button class="btn btn-primary btn-lg answer-btn">Oxygen and Hydrogen</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Iron and Oxygen</button>
+          <button class="btn btn-primary btn-lg answer-btn">Iron and Lead</button>
           </div>
           </div>
           <div class="row">
@@ -308,14 +308,14 @@
           <h5 class="card-title text-center">What is the second most common gas found in the air we breathe?</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Helium</button>
+          <button class="btn btn-primary btn-lg answer-btn">Oxygen</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Sulfur</button>
+          <button class="btn btn-primary btn-lg answer-btn">Krypton</button>
           </div>
           </div>
           <div class="row">
@@ -337,14 +337,14 @@
           <h5 class="card-title text-center">The world's longest river is:</h5>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 1</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 2</button>
+          <button class="btn btn-primary btn-lg answer-btn">Nile</button>
+          <button class="btn btn-primary btn-lg answer-btn">Amazon River</button>
           </div>
           </div>
           <div class="row justify-content-around">
           <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Answer 3</button>
-          <button class="btn btn-primary btn-lg answer-btn">Answer 4</button>
+          <button class="btn btn-primary btn-lg answer-btn">Congo River</button>
+          <button class="btn btn-primary btn-lg answer-btn">Niger</button>
           </div>
           </div>
           <div class="row">
